--- a/veiculos-service-api-dev.yml
+++ b/veiculos-service-api-dev.yml
@@ -54,7 +54,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.5:8090/eureka
+      defaultZone: http://localhost:8090/eureka
       
 logstash.host: 10.50.53.27
 logstash.port: 5000
