--- a/registros-service-api-dev.yml
+++ b/registros-service-api-dev.yml
@@ -36,7 +36,7 @@ spring:
   data:
      mongodb:
        authentication-database: admin
-       database: serco-app-dev
+       database: serco-registros-dev
        host: 10.50.53.27
        password: Softhausit!2019!
        port: 27017
