--- a/remessas-service-api-dev.yml
+++ b/remessas-service-api-dev.yml
@@ -2,7 +2,7 @@ spring:
   data:
      mongodb:
        database: zenite-cluster
-       uri: mongodb+srv://zenite-admin-app:LDP3yITXKR7RR21b@zenite-cluster.swe3yyp.mongodb.net/?retryWrites=true&w=majority&appName=zenite-cluster       
+       uri: mongodb+srv://zenite-admin-app:LDP3yITXKR7RR21b@zenite-cluster.swe3yyp.mongodb.net/?replicaSet=setInQuestion&retryWrites=true&w=majority&appName=zenite-cluster       
              
 eureka:
   client:
