--- a/registros-service-api-dev.yml
+++ b/registros-service-api-dev.yml
@@ -1,67 +1,27 @@
 spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          jws-algorithm: ES256
-          issuer-uri: http://10.50.53.27:8080/auth/realms/master
-          jwk-set-uri: http://10.50.53.27:8080/auth/realms/master/protocol/openid-connect/certs
-      client: 
-        registration:
-          keycloak:
-            provider: keycloak
-            client-name: registros-service
-            client-id: registros-service
-            client-secret: b3553ea2-ac19-415a-b67d-b834d09abf12
-            client-authentication-method: basic
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"        
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8080/auth/realms/master            
-            user-name-attribute: preferred_username
-  kafka:
-    consumer:
-      bootstrap-servers: 10.50.53.27:29092
-      group-id: searchtec-serco-api
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      
-    producer:
-      bootstrap-servers: 10.50.53.27:29092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
   data:
      mongodb:
-       authentication-database: admin
-       database: serco-registros-dev
-       host: 10.50.53.27
-       password: Softhausit!2019!
-       port: 27017
-       repositories.enabled: true
-       username: root
-     elasticsearch:
-      client:
-        reactive:
-          endpoints: 10.50.53.27:9200
-          username: 'elastic'
-          password: 'changeme'
-      cluster-name: 'searchtec-serco-cluster'
-      cluster-nodes: '10.50.53.27:9200'
-      repositories.enabled: true
-      
-  mvc:
-    throw-exception-if-no-handler-found: true    
-           
+       database: zenite-remessas
+       uri: mongodb://zenite-admin:ZeniteMongoSofthausIT2024@localhost:27017/	                
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8090/eureka
+      defaultZone: http://localhost:8090/eureka	  
+kafka:
+  consumer:
+    bootstrap-servers: localhost:9092
+    group-id: softhausit-zenite-api
+    auto-offset-reset: earliest
+    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    
+  producer:
+    bootstrap-servers: localhost:9092
+    key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    value-serializer: org.apache.kafka.common.serialization.StringSerializer
       
-logstash.host: 10.50.53.27
-logstash.port: 5000
+#logstash.host: localhost
+#logstash.port: 5000
 logging.level.org.springframework: ERROR
 logging.level.com: DEBUG
-elasticsearch.url: http://10.50.53.27:9200/_bulk
+#elasticsearch.url: http://localhost:9200/_bulk 
