--- a/remessas-service-api-dev.yml
+++ b/remessas-service-api-dev.yml
@@ -6,7 +6,7 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      group-id: softhausit-zenite-api
+      group-id: softhausit-zenite-kafka-id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
