--- a/contratos-service-api-dev.yml
+++ b/contratos-service-api-dev.yml
@@ -1,37 +1,8 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://zenite-registro-contratos.postgres.database.azure.com:5432/zenitedev
-    username: appdbadmin
-    password: Softhausit@2024
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          jws-algorithm: ES256
-          issuer-uri: http://10.50.53.27:8080/auth/realms/master
-          jwk-set-uri: http://10.50.53.27:8080/auth/realms/master/protocol/openid-connect/certs
-      client: 
-        registration:
-          keycloak:
-            provider: keycloak
-            client-name: contratos-service
-            client-id: contratos-service
-            client-secret: b3553ea2-ac19-415a-b67d-b834d09abf12
-            client-authentication-method: basic
-            authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/keycloak"        
-        provider:
-          keycloak:
-            issuer-uri: http://localhost:8080/auth/realms/master            
-            user-name-attribute: preferred_username
+spring:  
   kafka:
     consumer:
-      bootstrap-servers: 10.50.53.27:29092
-      group-id: searchtec-serco-api
+      bootstrap-servers: localhost:29092
+      group-id: softhausit-zenite-kafka-id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -44,21 +15,12 @@ spring:
   data:
      mongodb:
        authentication-database: admin
-       database: serco-contratos-dev
-       host: 10.50.53.27
-       password: Softhausit!2019!
+       database: zenite-contratos
+       host: 127.0.0.1
+       password: ZeniteMongoSofthausIT2024
        port: 27017
        repositories.enabled: true
-       username: root
-     elasticsearch:
-      client:
-        reactive:
-          endpoints: 10.50.53.27:9200
-          username: 'elastic'
-          password: 'changeme'
-      cluster-name: 'searchtec-serco-cluster'
-      cluster-nodes: '10.50.53.27:9200'
-      repositories.enabled: true
+       username: zenite-admin     
       
   mvc:
     throw-exception-if-no-handler-found: true    
@@ -68,8 +30,4 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8090/eureka
       
-logstash.host: 10.50.53.27
-logstash.port: 5000
-logging.level.org.springframework: ERROR
-logging.level.com: DEBUG
-elasticsearch.url: http://10.50.53.27:9200/_bulk
+elasticsearch.url: http://localhost:9200/_bulk
